fixed alignment of logos for cloud

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1160,26 +1160,35 @@ h2,h3,h4,h5,h6 a {
 
 .logo-list-container {
   text-align: center;
+  position: relative;
 }
 
-.logo-list-block {
-  background-color: #f5f5f5;
-  padding: 40px;
-  border: 1px solid #ccc;
+.logo-list-container a {
+  -webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	box-sizing: border-box;
   display: inline-block;
-  height: 175px;
-  margin: 1em;
-  width: 175px;
+  background-color: #f5f5f5;
+  padding: 2em;
+  width: 28%;
+  margin: .5em;
+  border: 1px solid #ccc;
   text-align: center;
 }
 
-.logo-list-block:hover {
+@media screen and (max-width: 480px) {
+  .logo-list-container a {
+    width: 45%;
+  }
+}
+
+.logo-list-container a:hover {
   background: #f0f0f0;
 }
 
 .logo-list-image img {
-  width: auto;
-  height: 100px;
+  width: 100%;
+  height: auto;
 }
 
 .logo-list-title {
